--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/drei": "^9.72.2",
     "@react-three/fiber": "^8.13.0",
     "firebase": "^10.7.1",
+    "firebaseui": "^6.1.0",
     "react": "18.2",
     "react-dom": "18.2",
     "three": "^0.153.0",
